--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nitesh Vishwakarma | Welcome</title>
+    <title>Welcome - Nitesh Vishwakarma</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <meta property="og:title" content="Welcome - Nitesh Vishwakarma" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="Software Engineer, Web Developer, Backend Engineer, Full Stack Developer" />
+    <meta property="og:description" content="Software Engineer, Web Developer, Backend Engineer, Full Stack Developer"/>
+    <link rel="canonical" href="index.html" />
+    <meta property="og:url" content="https://nvishwakarma.in/" />
+    <meta property="og:site_name" content="Welcome - Nitesh Vishwakarma" />
   </head>
   <body>
     <div id="root"></div>
