--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/entry-client.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
